--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@sweetalert2/themes": "^5.0.26",
+    "@tanstack/react-query": "^5.64.2",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
