--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@sweetalert2/themes": "^5.0.26",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
