--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "@sweetalert2/themes": "^5.0.26",
     "@tanstack/react-query": "^5.64.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "localforage": "^1.10.0",
